Added first personal details and contact section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <script src="https://kit.fontawesome.com/d73c0b6533.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <div class="resume">
+        <section class="personal">
+            <h1 class="name">Rishabh Sharma</h1>
+            <ul>
+                <li><i class="fa-solid fa-location-dot"></i> Bangalore</li>
+                <li><i class="fa-solid fa-phone"></i> +91 7899654883</li>
+                <li><i class="fa-solid fa-envelope"></i> rishabh4883@gmail.com</li>
+            </ul>
+        </section>
+    </div>
 </body>
 </html>
