created new directory for resume project

--- a/resume/index.html
+++ b/resume/index.html
@@ -17,6 +17,22 @@
                 <li><i class="fa-solid fa-envelope"></i> rishabh4883@gmail.com</li>
             </ul>
         </section>
+        <hr>
+        <section class="education">
+            <h3>Education</h2>
+            <ul class="institute">
+                <li>
+                    <div><span>New Horizon Public School</span> <span>2018</span></div>
+                    <div><span>83.68</span> <span>SSLC</span></div>
+                </li>
+                <li>
+
+                </li>
+                <li>
+
+                </li>
+            </ul>
+        </section>
     </div>
 </body>
 </html>
