--- a/resume/index.html
+++ b/resume/index.html
@@ -9,30 +9,24 @@
 </head>
 <body>
     <div class="resume">
-        <section class="personal">
+        <div class="personal">
             <h1 class="name">Rishabh Sharma</h1>
             <ul>
                 <li><i class="fa-solid fa-location-dot"></i> Bangalore</li>
                 <li><i class="fa-solid fa-phone"></i> +91 7899654883</li>
                 <li><i class="fa-solid fa-envelope"></i> rishabh4883@gmail.com</li>
             </ul>
-        </section>
+        </div>
         <hr>
-        <section class="education">
-            <h3>Education</h2>
-            <ul class="institute">
-                <li>
-                    <div><span>New Horizon Public School</span> <span>2018</span></div>
-                    <div><span>83.68</span> <span>SSLC</span></div>
-                </li>
-                <li>
-
-                </li>
-                <li>
-
-                </li>
+        <section class="profiles">
+            <h3>Profiles</h3>
+            <ul>
+                <li><i class="fa-brands fa-linkedin"></i> Rishabh S</li>
+                <li><i class="fa-brands fa-github"></i> rish4883</li>
             </ul>
         </section>
+        <hr>
+        
     </div>
 </body>
 </html>
