Education details half progress

--- a/resume/index.html
+++ b/resume/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/d73c0b6533.js" crossorigin="anonymous"></script>
+    <script src="index.js" defer></script>
 </head>
 <body>
     <div class="resume">
@@ -18,6 +19,7 @@
             </ul>
         </div>
         <hr>
+
         <section class="profiles">
             <h3>Profiles</h3>
             <ul>
@@ -26,7 +28,15 @@
             </ul>
         </section>
         <hr>
-        
+
+        <section class="education">
+            <h3>Education</h2>
+            <div class="details">
+            </div>
+        </section>
+        <hr>
+
+        <section class="experience"></section>
     </div>
 </body>
 </html>
