--- a/javascript-basics/index.html
+++ b/javascript-basics/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="simplecalc.js" defer></script>
+    <!-- <script src="simplecalc.js" defer></script> -->
 </head>
 <body>
-    
+    <h3>Hello</h3>
+    <p>kldfjsdkf akjffjsdk ldfdskfjkdsfk</p>
+    <div>
+        <ul>
+            <li>HI</li>
+        </ul>
+    </div>
+    <script>
+        for (let i = 0; i < document.body.childNodes.length; i++) {
+            alert(document.body.childNodes[i])
+        }
+    </script>
 </body>
 </html>
