--- a/todo/index.html
+++ b/todo/index.html
@@ -6,6 +6,10 @@
     <title>Todo List</title>
 </head>
 <body>
-    
+    <h1>ToDo App</h1>
+    <div class="input">
+        <input type="text" placeholder="Add new TAsk" id="inputTask">
+        <button id="addTask">Add</button>
+    </div>
 </body>
 </html>
