logic for adding task when btn clicked

--- a/todo/index.html
+++ b/todo/index.html
@@ -11,6 +11,11 @@
         <input type="text" placeholder="Add new TAsk" id="inputTask">
         <button id="addTask">Add</button>
     </div>
-    
+    <div class="taskList">
+        <!-- <div class="task">
+            <div>Task 1</div>
+            <button>x</button>
+        </div> -->
+    </div>
 </body>
 </html>
