logic for removing task on btn press and minor style fix

--- a/todo/index.html
+++ b/todo/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./index.js" defer></script>
 </head>
 <body>
+    <div>
     <h1>ToDo App</h1>
     <div class="input">
         <input type="text" placeholder="Add new TAsk" id="inputTask">
@@ -16,6 +19,7 @@
             <div>Task 1</div>
             <button>x</button>
         </div> -->
+    </div>
     </div>
 </body>
 </html>
