add edit and check functionality

--- a/todo/index.html
+++ b/todo/index.html
@@ -6,6 +6,7 @@
     <title>Todo List</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./index.js" defer></script>
+    <script src="https://kit.fontawesome.com/d73c0b6533.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div>
@@ -16,7 +17,7 @@
     </div>
     <div class="taskList">
         <!-- <div class="task">
-            <div>Task 1</div>
+            <div contenteditable="true">Task 1</div>
             <button>x</button>
         </div> -->
     </div>
