add functinality to fetch data from the server and display on the table

--- a/student-dashboard/index.html
+++ b/student-dashboard/index.html
@@ -83,13 +83,13 @@
         <div class="table-section">
             <h2>Student Records</h2>
             <div class="table-container">
-                <table>
+                <table class="student-table">
                     <thead>
                         <tr>
                             <th>SRN</th>
                             <th>Name</th>
                             <th>Department</th>
-                            <th>Email</th>
+                            
                             <th>Math</th>
                             <th>Engineering Chemistry</th>
                             <th>Kannada</th>
@@ -105,7 +105,6 @@
                             <td>SRN</td>
                             <td>Name</td>
                             <td>Department</td>
-                            <td>Email</td>
                             <td>Math</td>
                             <td>Engineering Chemistry</td>
                             <td>Kannada</td>
