added edit and delete button with functionality

--- a/student-dashboard/index.html
+++ b/student-dashboard/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./index.js" defer></script>
+    <script src="https://kit.fontawesome.com/d73c0b6533.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="page-container">
@@ -98,6 +99,7 @@
                             <th>Mechanical</th>
                             <th>Percentage</th>
                             <th>SGPA</th>
+                            <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
