--- a/login/index.html
+++ b/login/index.html
@@ -3,9 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - College Portal</title>
+  <title>Student Management Dashboard - Login</title>
+  <link rel="stylesheet" href="./style.css">
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://kit.fontawesome.com/d73c0b6533.js" crossorigin="anonymous"></script>
+  <script src="./index.js" defer></script>
 </head>
 <body>
+  <div class="login-card">
+    <h1>Student Login</h1>
+    <p>Welcome to the Student Management Dashboard</p>
+    <form id="login-form">
+      <div class="form-group">
+        <label for="email">User</label>
+        <i class="fa-solid fa-user"></i>
+        <input type="text" id="login" placeholder="enter username or email" required>
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <i class="fa-solid fa-lock"></i>
+        <input type="password" id="password" placeholder="••••••••" required>
+        <i class="fa-solid fa-eye toggle-password" onclick="togglePassword()"></i>
+      </div>
+      <div class="forgot-password">
+        Forgot your password? <a href="#">Reset here</a>
+      </div>
+      <button type="submit">Login</button>
+    </form>
+    <div class="create-account">
+      <p>Don't have an account?</p>
+      <button>Create Account</button>
+    </div>
+  </div>
+
 
 </body>
 </html>
