--- a/student-dashboard/index.html
+++ b/student-dashboard/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <div class="page-container">
-        <div class="heading">
+        <div class="heading" style=" position: sticky;
+  top: 0; z-index: 1;">
             <h1>Student Management System</h1>
             <p>Manage 2nd semester student records and analyse academic performaance</p>
         </div>
@@ -21,7 +22,7 @@
             <form id="student-form">
                 <div class="form-field">
                     <label for="fName">First Name</label>
-                    <input type="text" name="fName" id="fName">
+                    <input type="text" name="fName" id="fName" required>
                 </div>
                 <div class="form-field">
                     <label for="lName">Last Name</label>
